workshop04/patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: ClusterIP
