workshop04/netpol.yaml
---
# Ingress confirguration for this app, nginx or another ingress controller must be deployed first
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ing
  labels:
    name: wp-ing
spec:
  # k get ingressclass
  ingressClassName: nginx
  # how to route the traffic
  rules:
  # url for browser, uses nip.io
  - host: wp-139.59.192.228.nip.io
    http:
      paths:
      - path: /
        # anything that starts with / are routed to 
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
---
# Only allow wordpress access to DB
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-netpol
  labels:
    name: db-access
spec:
  podSelector:
    matchLabels:
      app: wordpress
      tier: mysql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: wordpress
          tier: frontend
    ports:
    - port: 3306
      protocol: TCP
# rule to allow ingress
